--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   http: ^0.12.0
   flutter_webview_plugin: ^0.3.0
   flutter_swiper: 1.1.4
-
+  shared_preferences: ^0.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
