--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_webview_plugin: ^0.3.0
   flutter_swiper: 1.1.4
   shared_preferences: ^0.4.2
+  fluttertoast: ^3.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
