--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^0.4.2
   fluttertoast: ^3.0.3
   barcode_scan: 0.0.8
+  qr_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
