--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0
-  flutter_webview_plugin: ^0.3.0
+  flutter_webview_plugin: 0.3.0
   flutter_swiper: 1.1.4
   shared_preferences: ^0.4.2
-  fluttertoast: ^3.0.3
+  fluttertoast: 3.0.3
   barcode_scan: 0.0.8
   qr_flutter: ^2.0.0
 
